feat: migrate springboot3